--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <body>
@@ -5,10 +6,29 @@
 <h1>CS103F Spring 2019: Group B19GGERS</h1>
 <h2> Members: Parth, Eleni, Ben, Sujoy </h2>
 
-<h3> Blog Post 2: January 30, 2019: </h3>
+<h3> Blog Post 3: February 6, 2019: </h3>
+
 
 <p>
-	Sexual consent is the mutual agreement between two partners at all points during sexual activity (Rainn). Ideally, <br> the agreement should be clearly given verbally between any two partners. Depending on the situation, such as a <br> long-term relationship, there can be clear physical cues to show the comfort level. However, consent becomes hazy <br>when there is hesitant action, alcohol involved, or nonverbal cues. Did she say yes? I think she did… When situations <br>arise where the victim is intimidated or agreement is forced, “consent” does not count. In random hookups or new <br>relationships, consent needs to be clear because the relationship and limits have not been defined. <br> <br>
+Bob could have acted this way due to an egotistical character flaw. He might have assumed that his coding skills were superior to <br>Alice’s and therefore, his code should be implemented instead of hers. This places Carlos in a difficult position in this disagreement <br> as he believes in Alice’s ability to code. He perhaps even feels more comfortable working with Alice because Bob does not <br>collaborate well. Alice may feel that Bob’s actions were unfair and that he was too quick to assume her code was inadequate. Even if <br> the genders of the individuals were switched, if Bob is inherently an egotistical person, this same scenario can arise. There is also <br> the chance that Bob was more provoked to not accept Alice’s code due to false assumptions that gender affects her abilities to code.<br>
+<br>
+This sort of incident can affect both the relationships within the group and harm their individual self-confidence. Alice might feel<br>like she is not good enough or likes an “imposter” by Bob for not accepting her code.  Bob may even feel hurt as well for being <br>isolated, and not being able to understand code he’s told is clear and correct.<br>
+<br>
+The long term effects of this incident may deteriorate interpersonal communication. Alice and Carlos might feel that Bob is unlikely to <br> accept their future ideas because Bob was quick to demonstrate that he could completely dismiss someone’s work and ideas. <br>Furthermore, the group might not be as productive due to trust issues between members. <br>
+<br>
+Bob should let Alice explain her code, perhaps by adding better comments. He should apologize for being quick to judge and be <br>open-minded when listening to Alice’s explanation. In an attempt to make the code better, Alice and Bob could merge their code or test<br> to see which one is better.  In order for the group to remain productive, it is crucial for Bob to integrate into Alice’s code and <br>put ego aside. Carlos could step in and offer a different explanation of Alice’s code. All three members can take steps to better <br>communicate their roles in order to improve productivity and avoid coding something twice unnecessarily.<br>
+
+<br>
+</p>
+
+
+
+<img src="group_photo.JPG" alt="Smiley face" height="300" width="470">
+<p>Eleni, Parth, Ben, Sujoy</p>
+
+<h3> Blog Post 2: January 30, 2019: </h3>
+<p>
+Sexual consent is the mutual agreement between two partners at all points during sexual activity (Rainn). Ideally, <br> the agreement should be clearly given verbally between any two partners. Depending on the situation, such as a <br> long-term relationship, there can be clear physical cues to show the comfort level. However, consent becomes hazy <br>when there is hesitant action, alcohol involved, or nonverbal cues. Did she say yes? I think she did… When situations <br>arise where the victim is intimidated or agreement is forced, “consent” does not count. In random hookups or new <br>relationships, consent needs to be clear because the relationship and limits have not been defined. <br> <br>
 
 A popular #MeToo case corresponds with the recent appointment of Judge Kavanaugh who was accused by Blasey Ford of sexual<br> assault while he was at a college party at Yale. When Kavanaugh was appointed to Supreme Court, Ford realized her <br>responsibility to the American public to share what she knows about his character before being put in a lifetime position<br> of power (Gay, Fandos). The motive of Kavanaugh of denying his actions is an example of loss aversion -- he does not <br> want to lose his position or reputation. He denied accusations because he believes he is qualified despite mistakes <br>that happened over 25 years ago. <br><br>
 
