--- a/index.html
+++ b/index.html
@@ -1,10 +1,29 @@
-
 <!DOCTYPE html>
 <html>
 <body>
 
 <h1>CS103F Spring 2019: Group B19GGERS</h1>
 <h2> Members: Parth, Eleni, Ben, Sujoy </h2>
+
+<h3> Blog Post 4: February 13, 2019: </h3>
+
+
+<p>
+
+According to a TechCrunch article by Alex Wilhelm and Alexia Tsotsis, well-known programmer Julie Horvath joined GitHub back in the year 2012. Initially, GitHub was a small<br>startup that was quite supportive of its female developers. However, she could not get used to the aggressive communication from her male colleagues that had been the norm<br>since the majority of the company was up to that point. As the company grew, Horvath felt that her work was not truly valued due to her gender. Having rejected a date, <br>unnecessary competition was created between the Horvath and the other engineer. The male engineer “ripped out (Horvath’s) code”  without giving her any credit. This toxic <br>culture continued to develop at Github as a result of no action by management. <br>
+<br>
+A duty-based ethical framework can be applied to this situation. Horvath claims that she was supportive of GitHub’s positive culture to feminists throughout her two-year-long<br> employment. Despite her claims that she was being harassed by upper-management, Horvath could have been silent about her situation as she must have felt an obligation to <br>support her company. Her silence and support of the company hid her discrimination, allowing it to continue.<br>
+<br>
+
+As discussed in Fowler’s article about women’s representation in Uber, the company failed to keep a women-welcoming organization as the company grew.  From the anecdotes told <br>by #ubersurvivors, the organization had a culture that sexualized women that was encouraged by upper management. By the time Fowler had quit Uber, women percentage in the <br>organization had dropped from 25% to 3%. With no changes stemming from management, the culture can only get worse because the entire industry suffers from the same issue. 7 <br>out of 10 women in tech startups report sexual harassment, while just 35 percent of men agree (Weisul). Uber only became proactive about women after they were criticized about<br> their environment and as a result, started to create programs. Through a consequentialist framework, the culture will continue to falter until management changes to ensure <br>it does not reflect poorly on the company as many consumers will not want to support a company that is discriminatory.<br>
+
+
+<br>
+</p>
+
+<img src="group_photo.JPG" alt="Smiley face" height="300" width="470">
+<p>Eleni, Parth, Ben, Sujoy</p>
+
 
 <h3> Blog Post 3: February 6, 2019: </h3>
 
