--- a/index.html
+++ b/index.html
@@ -5,6 +5,26 @@
 <h1>CS103F Spring 2019: Group B19GGERS</h1>
 <h2> Members: Parth, Eleni, Ben, Sujoy </h2>
 
+<h3> Blog Post 5: February 20, 2019: </h3>
+
+
+<p>
+
+The Challenger Disaster is a prime example of a costly ethical decision that killed several astronauts.<br>The engineers that understood the complex technology gave warnings to their higher-ups. They understood <br>that a technical detail could have a major impact on the launch of the rocket and astronauts on board, <br>and as a result, decided to warn the executives through a duty-based value system. Despite giving strong <br>warnings (that were ignored), the engineers didn’t do anything more -- a consequentialist view since <br>any other actions could have resulted in the loss of a job. Though the engineers did good in warning <br>their superiors of the technical red flag, they succumbed to obedience over a higher authority -- an <br>action that is common in our society. <br>
+<br>
+Those that ultimately made the decision to launch the Challenger actively ignored warnings by the <br>engineers. The launch had already been delayed once, and the commanders did not want to waste any more<br> time. Furthermore, after the failed launch, the people in power failed to accept their faults. They simply <br>blamed Boisjoly for “airing the company’s dirty laundry’ in front of the whole country. ” They ignored <br>warnings by engineers and told the public the cause of the disaster was due to flaws in decision <br>making. This exemplifies the consequentialist framework of the ethical decision process. The selfish <br>attitudes of the upper management and their urge to report success caused them to ignore technical details <br> they did not understand. They risked human life and months of hard work for a few moments of glory. <br> 
+<br>
+In situations such as these, it is quite imperative to listen to the advice of technical experts. For <br>NASA, individuals who coordinated the mission, including Morton Thiokol, to launch as soon as possible. <br>Utilizing a consequentialist framework, the hypothetical success they envisioned in the future would <br>ultimately justify their desire to rush Challenger’s launch, even when seven human <br>
+
+
+
+
+<br>
+</p>
+
+<img src="group_photo.JPG" alt="Smiley face" height="300" width="470">
+<p>Eleni, Parth, Ben, Sujoy</p>
+
 <h3> Blog Post 4: February 13, 2019: </h3>
 
 
