--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
 <h1>CS103F Spring 2019: Group B19GGERS</h1>
 <h2> Members: Parth, Eleni, Ben, Sujoy </h2>
 
+
+<h3> Blog Post 6: February 28, 2019: </h3>
+
+
+<p>
+
+According to a New York Times article by Ceylan Yeginsu, Amazon has developed wristbands that track the productivity<br> of its factory workers. In general, the wristband concept is not unethical. From a consequentialist framework, <br>Amazon is simply smoothening out human inefficiencies in its factories. The bracelets are assisting workers with <br>their labor and highlighting which workers may be wasting company resources by being idle.  However, the possible<br> applications Amazon can use the wristband for are potentially unethical.  Amazon claims the wristbands are <br>designed to assist the workers in locating a package through haptic feedback, however, the technology required to do<br> this forces Amazon to track their employees’ every move.  This would be an invasion of employees’ privacy and <br>could lead to unethical oversight of employees.  Amazon also has ten percent of its Ohio employees relying on food <br>stamps.  As a large business that receives outrageous tax breaks, Amazon has not only the financial ability but <br>also the duty to its community and employees to respect and keep food on the plates of the people who make <br>Amazon's efficiency possible.<br>
+<br>
+Our society enables Amazon because of capitalism; consumers want efficiency -- and Amazon provides just that. <br>Fulfilling this need for consumers, allows them to have a lot of freedom in doing what they want. However, as a <br>result of receiving business subsidies and tax-break incentives, Amazon has a duty to help the local community and <br>its economy. Based on a duty-based framework, Amazon’s role as a tech giant and influencer, Amazon has the duty <br>to give back to communities they have disrupted. Because Amazon has had free reign over the market, they have <br>caused many local businesses to go out of business. Amazon should find a way to support local businesses and <br>encourage their growth. <br>
+
+Technology’s role has the potential to harm work culture and overall ethics of working conditions in the Amazon <br>warehouses. Although technology is helping workers become more efficient, it is also developing an environment where <br>workers feel like they are always under pressure and scrutiny. <br>
+
+<br>
+</p>
+
+<img src="group_photo.JPG" alt="Smiley face" height="300" width="470">
+<p>Eleni, Parth, Ben, Sujoy</p>
+
 <h3> Blog Post 5: February 20, 2019: </h3>
 
 
