--- a/index.html
+++ b/index.html
@@ -6,6 +6,28 @@
 <h2> Members: Parth, Eleni, Ben, Sujoy </h2>
 
 
+<h3> Blog Post 7: March 6, 2019: </h3>
+
+
+<p>
+Youtube has a responsibility to provide an enjoyable platform that allows users to watch and share videos freely, while still upholding company policies. Their responsibility to advertisers is to provide advertising space that is not associated with content that hurts their image. 
+<br><br>
+The content on YouTube is a responsibility of both the platforms content creators and YouTube itself. The conversation about YouTube’s content is largely controlled by the creators who use YouTube to publish and monetize their content.  These creators discuss YouTube’s practices of demonetization and censorship on their content, bringing awareness of the situation from a creator’s perspective. Framing the discussion from a creator’s point of view allows for alternate framing of the situation, from that of advertisers and from YouTube itself. 
+<br><br>
+Advertisers have a right to keep their name away from content that could be harmful or controversial to themselves, while YouTube has a responsibility to uphold this right in order to keep its content monetized and funded. Since Youtube does not want to lose their clients which provide company revenue, they tend to demonetize videos even if they are slightly questionable. Google’s fundamental goal is to make correct information available to others, thus Youtube should not make money off videos that misinform and spread fake news.
+<br><br>
+Youtube’s profit model is based on a duty-based ethical framework as it finds a good balance between balancing having a platform that content can be freely shared while acknowledging capitalism and advertisers needs. YouTube has demonetized Alex Jones’ channel, InfoWars after he posted several extremely controversial videos. Demonetization was an appropriate action as it punishes Jones for spreading blatant misinformation and hurtful messages throughout the internet. And though several content creators have reported that YouTube has wrongly demonetized their videos for no reason, Youtube can work to fix these issues. 
+
+
+
+
+<br><br>
+</p>
+
+<img src="group_photo.JPG" alt="Smiley face" height="300" width="470">
+<p>Eleni, Parth, Ben, Sujoy</p>
+
+
 <h3> Blog Post 6: February 28, 2019: </h3>
 
 
