--- a/index.html
+++ b/index.html
@@ -5,6 +5,27 @@
 <h1>CS103F Spring 2019: Group B19GGERS</h1>
 <h2> Members: Parth, Eleni, Ben, Sujoy </h2>
 
+<h3> Blog Post 8: March 14, 2019: </h3>
+
+
+<p>
+	<br>
+Software piracy does more bad than good. The ones that benefit short-term from piracy are only the individuals that choose to use it. These individuals that pirate software don’t realize the larger long-term impact on the product itself, the company, people in the company, and other genuine customers. 
+<br><br>
+People justify piracy to themselves because they think the money from just their copy of the game is so insignificant that it will barely affect the development company that they are ripping off. Especially for a small price tag on a game like Game Dev Tycoon, one small sale couldn’t possible harm the developers in their mind. They fail to realize however that everyone pirating the game adds up, and can make a significant dent in the sales margin of a game or other digital medium.  The consequences that arise from piracy include potentially bankrupting the company and stopping the product from being developed further. This in turn could lead to more ads to pay off the cost of producing the game or the increase of annoying pay-to-play mechanics.  
+<br><br>
+Technology has made piracy very easy and accessible. Anyone with a internet connection and computer can download games and watch movies/shows for no cost. Through the use of VPN and proxies, people can avoid getting in trouble with law officials and game/movie publishers. The ease of access and distribution that technology provides is essentially what makes the profit loss for software development companies stack up. For the individuals who pirate, their thinking might align with a virtue based framework in the sense that they are giving access to individuals who genuinely cannot afford a particular piece of software. However, individuals how can afford a piece of software should pay for it according to a consequentialist framework, as their decisions can cumulatively have a substantial impact. Excessive piracy may result in companies raising the average cost of game to make up for the losses due to illegal sharing of their game. 
+
+
+
+
+
+<br><br>
+</p>
+
+<img src="group_photo.JPG" alt="Smiley face" height="300" width="470">
+<p>Eleni, Parth, Ben, Sujoy</p>
+
 
 <h3> Blog Post 7: March 6, 2019: </h3>
 
