--- a/index.html
+++ b/index.html
@@ -2,8 +2,25 @@
 <html>
 <body>
 
-<h1>CS103F Spring 2019: Group B19GGERS</h1>
-<h2> Members: Parth, Eleni, Ben, Sujoy </h2>
+
+<h1>CS103F Spring 2019: Group 6</h1>
+<h3> Members: Andrew, Eleni, Claire, Rahul </h3>
+<h3> Blog Post 9: March 29, 2019: </h3>
+<img src="group_photo2.JPG" alt="Smiley face" height="300" width="470">
+<p>
+	In the past few years, data collection in software has gotten a lot of attention. The acceptable line of data collection for convenience occurs when it goes beyond the scope of what a consumer agrees to. The tech industry plays a major part in this question as companies create applications that can harvest and use individuals’ personal information. Companies must decide how to use data they collect. 
+<br><br>
+
+By trading software access and information for personal data, individuals benefit from the convenience that applications create. For instance, from a consequentialist standpoint, by allowing Location Services, Google can offer you more intelligent recommendations such as show you where you parked your car or give suggestions for restaurants. However, individuals might feel that their privacy is compromised and that their information is being exploited which could pose security issues. There are always unintentional consequences that arise --- on a societal scale, data that gets into the wrong hands could be used maliciously. Because of this trade-off, society must decide how we want to deal with the data.  
+<br><br>
+There has been a lot of debate over data privacy and who should own personal data. GDPR (General Data Protection Regulation) is a data protection policy enforced by the European Union that sets guidelines regarding the collection and processing of personal data for individuals in the EU. GDPR has made headlines the past few years about attempting to set boundaries on how companies can use people’s personal data. Our group believes that companies should disclose to their consumers how their data is being collected and used, and offer to delete the data if the consumer does not consent to these practices.
+<br><br>
+As specified on the GDPR website, data privacy consent is informed and specific. Customers should know the data controller’s identity, what kind of data it will process, how it will be used, and be informed about their right to withdraw consent at any time. Informed consent means that the data-controlling agent must disclose the motivation behind getting personal data and receive the consumer’s consent prior to collecting data; additionally, revoking consent should be just as easy as giving it.
+<br><br>
+</p>
+
+<h3>CS103F Spring 2019: Group B19GGERS</h3>
+<h3> Members: Parth, Eleni, Ben, Sujoy </h3>
 
 <h3> Blog Post 8: March 14, 2019: </h3>
 
