sources on blog 9

--- a/index.html
+++ b/index.html
@@ -17,7 +17,23 @@ There has been a lot of debate over data privacy and who should own personal dat
 <br><br>
 As specified on the GDPR website, data privacy consent is informed and specific. Customers should know the data controller’s identity, what kind of data it will process, how it will be used, and be informed about their right to withdraw consent at any time. Informed consent means that the data-controlling agent must disclose the motivation behind getting personal data and receive the consumer’s consent prior to collecting data; additionally, revoking consent should be just as easy as giving it.
 <br><br>
+Sources:
+	<ul>
+		Constaine, Josh.<a href=https://techcrunch.com/2019/01/29/facebook-project-atlas/> Facebook pays teens to install VPN that spies on them </a>, Tech Crunch, January, 29, 2019.
+</ul>
+<ul><a href = “https://www.cbsnews.com/news/how-youre-tracked-online-facebook-google-amazon-uber-what-you-can-do-about-it/”> How you're tracked online---and what you can do about it.</a> CBS News, March 31, 2018.
+</ul>
+<ul>Tufekci, Zeynep. <ahref = “https://www.nytimes.com/2018/03/19/opinion/facebook-cambridge-analytica.html”> Facebook's Surveillance Machine </a>, The New York Times, March 19, 2018.
+</ul>
+<ul> Yanofsky, David. <a href= “https://qz.com/1183559/if-youre-using-an-android-phone-google-may-be-tracking-every-move-you-make/”> If you're using an Android phone, Google may be tracking every move you make</a>, Quartz, January 24, 2018.
+</ul>
+
+
+
+	</ul>
 </p>
+
+
 
 <h3>CS103F Spring 2019: Group B19GGERS</h3>
 <h3> Members: Parth, Eleni, Ben, Sujoy </h3>
