--- a/index.html
+++ b/index.html
@@ -3,7 +3,33 @@
 <body>
 
 
+
+
 <h1>CS103F Spring 2019: Group 6</h1>
+
+<h3> Members: Andrew, Eleni, Claire, Rahul </h3>
+<h3> Blog Post 10: April 5, 2019: </h3>
+<img src="group_photo2.JPG" alt="Smiley face" height="300" width="470">
+<p>
+Recently, the concept of hacktivism has gained massive traction as our continual use of technology has increased. Hacktivism has affected many aspects of people’s lives, both on a societal and individual level.
+<br><br>
+From a societal standpoint, hacktivism has had a large part in domestic politics and impacted many influential and wealthy people. For example, it was exposed that many wealthy people were hiding money offshores in the Panama Papers data leak. In some ways, it is beneficial to society to have these hacktivists publicize this information and allow for the free flow of information. This is further seen in the activities of cyberactivists in Arab countries for freedom of speech and freedom from oppression, or from Edward Snowden’s work on government surveillance programs. 
+<br><br>
+On the other side however, hacktivism is can be harmful to the individual when it is targeted against them. For example, despite it being  justified in some way to publicize the data information of the Ashley Madison affair business, the individuals who wanted to keep their data secret will now have to face the consequences of their choices. Similarly, if a user’s data that they expect to keep private is made public, then that is clearly harmful to that user.
+<br><br>
+Deciding strict criteria for when hacktivism is ethical and when it is not is likely impossible. It’s difficult to make blanket statements on the actions of hacktivists when their goals	 and motives vary so much. Some might want to benefit society in a way they think is good. Others may just want to further their own positions. It’s not merely black or white as what’s good for one group may be terrible for another. The presence of these ambiguous virtue frameworks of hacktivists means that we as a society have to exam hacktivist actions on a case-by-case basis to determine if we deem it more morally good than bad. Even then, not everyone will be satisfied.
+<br><br>
+
+Sources:
+<ul> Lohrmann, Dan. <a href=”https://techcrunch.com/2017/02/22/the-dramatic-rise-in-hacktivism/”?> The Dramatic Rise in Hactivism</a>, Tech Crunch, February 22, 2017</ul>
+<ul> Zetter, Kim. <a href=”https://www.wired.com/2015/08/happened-hackers-posted-stolen-ashley-madison-data/”> Hackers Finally Post Stolen Ashley Madison Data </a>, Wired, August, 18, 2015. </ul>
+<ul> Ryan, Yasmine.<a href=”https://www.aljazeera.com/news/middleeast/2011/05/201151917634659824.html”> Anonymous and the Arab Uprisings</a>, Al Jazeera, May 19, 2011.</ul>
+<ul> Carlson, Andrew. <a href=”https://ethicsunwrapped.utexas.edu/case-study/edward-snowden-traitor-hero”> Edward Snowden: Traitor or Hero?</a>. Ethics Unwrapped, The University of Texas at Austin. </ul>
+</p>
+
+
+<br><br>
+
 <h3> Members: Andrew, Eleni, Claire, Rahul </h3>
 <h3> Blog Post 9: March 29, 2019: </h3>
 <img src="group_photo2.JPG" alt="Smiley face" height="300" width="470">
