--- a/index.html
+++ b/index.html
@@ -10,6 +10,34 @@
 <h3> Members: Andrew, Eleni, Claire, Rahul </h3>
 <h3> Blog Post 10: April 5, 2019: </h3>
 <img src="group_photo2.JPG" alt="Smiley face" height="300" width="470">
+
+<p>
+Artificial Intelligence provides our society tools ranging from individual assistance to solutions to large-scale problems including banking regulation and policing. AI is a useful tool when the utility from the insight that it generates outweighs the cost to acquire the data. For example, using an AI voice assistant such as Google Assistant or Alexa offers many features that can simplify one's life at the cost of allowing Google and Amazon to collect data about your internet searchers, preferences, and spending habits. However, an example where using AI could bring more negative consequences than positive is the Facebook newsfeed ranking scandal that emerged during the 2016 presidential elections. Facebook’s AI algorithm sparked controversy because it favored content coming from extremist sources, an unintended consequence of AI, which in this case can influence an entire country’s election process.
+</p> <p>The solutions proposed thus far offer good starting points to alleviate some of the problems that arise with AI. These include incorporating bias testing to test the algorithm’s blind spots and increasing the diversity among the creators to reflect thoughts of more types of people. Though the solutions pinpoint two major problem areas with AI, there will still be implicit bias embedded in these systems. Computer scientists have an ethical responsibility to become aware of the situation at hand and proceed with measures to try to combat the related problems so unintended consequences will not occur. Through a consequentialist viewpoint, it is in the best interest for all computer scientists to become aware of biases they might be introducing into their code, even if it might not be AI-related. 
+</p>
+<p>
+As the builders of the technology for the future, everyone involved in the product development process and release is susceptible to ethical fading and incrementalism. It is important to be not only cognisant the materials are sourced but how materials are sourced and passed down the supply chain. For example, an executive board member of a large clothing manufacturer may practice consequentialism and not consider human labor violations happening in the factories making the garments. Duty-based ethics may be utilized to combat incrementalism. One could ask oneself “is still the right thing to do” to not fall off a slippery slope by accepting a lower and lower standard of ethics over time.
+</p>
+<br><br>
+
+Sources: <p>
+<ul> <a href=”https://www.wired.com/2016/11/facebook-won-trump-election-not-just-fake-news/”> https://www.wired.com/2016/11/facebook-won-trump-election-not-just-fake-news/</a> </ul> 
+<ul> <a href= “https://www.technologyreview.com/s/607955/inspecting-algorithms-for-bias/”> https://www.technologyreview.com/s/607955/inspecting-algorithms-for-bias/ </a> </ul> 
+<ul> <a href= “https://hbr.org/2018/02/can-we-keep-our-biases-from-creeping-into-ai”> https://hbr.org/2018/02/can-we-keep-our-biases-from-creeping-into-ai</a> </ul>
+<ul> <a href=”https://www.theverge.com/2018/2/27/17054740/palantir-predictive-policing-tool-new-orleans-nopd”>https://www.theverge.com/2018/2/27/17054740/palantir-predictive-policing-tool-new-orleans-nopd </a> </ul>
+</p>
+
+<br><br>
+
+
+
+
+
+
+
+<h3> Members: Andrew, Eleni, Claire, Rahul </h3>
+<h3> Blog Post 10: April 5, 2019: </h3>
+<img src="group_photo2.JPG" alt="Smiley face" height="300" width="470">
 <p>
 Recently, the concept of hacktivism has gained massive traction as our continual use of technology has increased. Hacktivism has affected many aspects of people’s lives, both on a societal and individual level.
 <br><br>
