--- a/index.html
+++ b/index.html
@@ -7,6 +7,40 @@
 
 <h1>CS103F Spring 2019: Group 6</h1>
 
+
+<h3> Members: Andrew, Eleni, Claire, Rahul </h3>
+<h3> Blog Post 12: April 19, 2019: </h3>
+<img src="group_photo2.JPG" alt="Smiley face" height="300" width="470">
+
+<p>
+Gamification is taking advantage of human motivation from games and applying it in other activities or apps. Whether in real-life use or application development, gamification is potent enough to allow users to stick to the service or activity longer than if it wasn’t gamified. Instead of being purely function-focused and hyper-efficient, they are much more psychologically-oriented to keep your attention. It can be as simple as collecting daily streaks in Snapchat, or as complex as managing an entire leveling system in Habitica (an RPG-inspired to-do list app).
+</p> <p>
+In many ways, gamification can be a positive force. For example, you can gamify your life in order to get past psychological hurdles or boundaries in order to achieve your goals. This can range from achieving personal life goals like consistently getting into a good habit to getting over fears and other mental challenges. As an example, take Nike’s running app, Nike+. By taking advantage of our competitiveness, it pushes us to beat our previous running records each day. Or take Duolingo, which utilizes daily streaks, experience, badges, and power-ups to keep people engaged while learning languages.
+</p>
+<p>
+However, just like any tool, gamification can also be negatively used. Mobile apps such as FarmVille exemplify this, as they’re not exactly something that most people find fun, but they have exploited human behaviorism to get people addicted. In the case of FarmVille, it ensures you stick around by making you feel ownership over the farm you have been building and providing a limited progression system that keeps people playing in short bursts before their interest wanes during each play session. But this is not only limited to games, as many companies and products we use utilize gamification, like our phones, laptops, TVs, etc by getting the brain to flood with positive endorphins at every action we take, keeping us glued to our screens. 
+</p>
+<br><br>
+
+Sources: <p>
+<ul> <a href=”https://www.growthengineering.co.uk/using-gamification-to-achieve-goals/”> https://www.growthengineering.co.uk/using-gamification-to-achieve-goals/ </a>
+
+</ul> 
+<ul> <a href= “https://yukaichou.com/gamification-examples/octalysis-complete-gamification-framework”> https://yukaichou.com/gamification-examples/octalysis-complete-gamification-framework </a> 
+</ul> 
+ <ul> <a href=”https://yukaichou.com/gamification-examples/farmville-game-mechanics-winning-addicting/”> https://yukaichou.com/gamification-examples/farmville-game-mechanics-winning-addicting/ </a> 
+</ul>
+<ul> <a href=”https://www.bitcatcha.com/blog/gamify-website-increase-engagement/”> https://www.bitcatcha.com/blog/gamify-website-increase-engagement/ </a>
+ </ul>
+</p>
+
+<br><br>
+
+
+
+
+
+
 <h3> Members: Andrew, Eleni, Claire, Rahul </h3>
 <h3> Blog Post 11: April 12, 2019: </h3>
 <img src="group_photo2.JPG" alt="Smiley face" height="300" width="470">
