--- a/index.html
+++ b/index.html
@@ -8,6 +8,33 @@
 <h1>CS103F Spring 2019: Group 6</h1>
 
 
+
+<h3> Members: Andrew, Eleni, Claire, Rahul </h3>
+<h3> Blog Post 13: April 26, 2019: </h3>
+<img src="group_photo2.JPG" alt="Smiley face" height="300" width="470">
+
+<p>
+As a computer scientist, one must consider the effects of their work on individuals, the company, and society as a whole. The products we create could have a lasting impact on society from data collection to artificial intelligence. As society approaches new technological territory and the capability of what we can do expands, computer scientists must tread with caution as they pave the way for ethics in this new realm.  </p>
+<b> Okay, great. How? </b>
+<p>
+Fortunately, there are small things everyday computer scientists should do to maintain high ethical standards. One may ask itself - am I doing this being I was told to or because I believe it is truly right? The following are points to be considered and followed to guide ethical decision making in your work.  
+
+<ol>1. As a computer scientist, you will most certainly be working in a team. Be respectful to your colleagues and create a welcoming environment. The best product is cultivated in a well-cohesive group with a diverse pool of thoughts. Do your best to communicate with your peers and be conscious of any microaggressions you might be saying, whether it be intentional or unintentional. </ol>
+<ol>2. The safety, well-being, and privacy of your users is paramount. The users’ well-being should alway be put ahead of profits or other company motives that may neglect the user. Furthermore, be fair and do not discriminate against your users. Make sure you are representative of your users while testing and rolling out new products. </ol>
+<ol>3. Obey the laws to the best of your ability. When choosing between management orders and the laws, you should eir towards the side of the law. Further action should also often be made, such as following Europe's GPR for data collection even if you are a US company. Following standardized guidelines and laws helps create transparency with the public.</ol>
+<ol>4. Do not purposely lie or deceive the public or management. Be explicit to your clients with what you are doing, even if it involves admitting failure. Not only is fraud illegal, it can cause serious breaches in trust both within the company and with outside users. Even lying about small numbers or the amount of work done can cause significant complications down the line. If pressured to lie by management or incentivized to lie to protect one’s job, you should put honesty first (even if the consequences seem too much in the short-run). Losing a job is a small price to pay to avoid the serious reprimandations of breaking the law.</ol>
+<ol>5. Don’t fall into routine; always think as an individual. Just because everyone else is acting a certain way, does not mean it is right. Don’t be afraid to stand up for what you believe in, even if it has strong implications. By holding a high standard for yourself and those around, the highest quality material will be produced. </ol>
+<ol>6. Be loyal to your employer whenever possible. You have an obligation to serve them to your best abilities. This does not condone committing actions at the expense of clients, the law, or your own close values. However, employers are paying you to work for them so refusing to follow guidelines or orders without significant reasoning is unfair to the employer.</ol>
+
+<br>
+As ethics is a very complicated subject matter and no ethical framework can ever be perfectly applied to every situation, this Code of Ethics is only a set of guidelines. As much as we’d love to solve every ethical dilemma in only 500 words, the best we can do is create rules to help guide people along to the most ethical decisions in any scenario. But merely following guidelines will not produce the best outcome, both knowledge and independent thought/actions are required. It is on each of us to actively think about our situation and analyze what our best actions are in order to be as ethical as we can be.
+</p>
+
+
+
+
+<br><br>
+
 <h3> Members: Andrew, Eleni, Claire, Rahul </h3>
 <h3> Blog Post 12: April 19, 2019: </h3>
 <img src="group_photo2.JPG" alt="Smiley face" height="300" width="470">
